2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* profiler.tcl:
	* profiler.man:
	* pkgIndex.tcl:  Set version of the package to to 0.2.1.

2003-02-24  David N. Welton  <davidw@dedasys.com>

	* profiler.tcl (::profiler::tZero): Use string map instead of
	regsub.

2003-02-06  David N. Welton  <davidw@dedasys.com>

	* profiler.tcl (::profiler::profProc): Use string match instead of
	  regexp.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* profiler.man: More semantic markup, less visual one.

2002-10-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* profiler.tcl (dump): required result initialization. [Bug #564767]

2002-04-15  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* profiler.man: Added doctools manpage.

2001-08-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Moved version to 0.2.

	* profiler.test: Adapted testsuite.

	* profiler.n: Added documentation. Same patch as below.

	* profiler.tcl: Applied patch [446799] by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>, adding support for
	  resume/suspend operations to the profiler. moved version to 0.2.

2001-07-31  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* profiler.tcl (Handler): Fixed [446562].

2001-07-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* profiler.tcl: Frink 2.2 run, fixed dubious code.

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* profiler.tcl: Fixed dubious code reported by frink.

2000-09-20  Eric Melski  <ericm@ajubasolutions.com>

	* profiler.tcl: Corrected some non-Tcl-style-guide conforming
	function headers.

2000-06-15  Eric Melski  <ericm@ajubasolutions.com>

	* profiler.tcl: Added mods from Philip Ehrens
	<pehrens@ligo.caltech.edu> to changed formatting, add additional
	statistics. [RFE: 5060]

2000-03-27  Eric Melski  <ericm@scriptics.com>

	* profiler.tcl: Added a check for [clock clicks] wrapping.

2000-03-20  Eric Melski  <ericm@scriptics.com>
